# Whats-That-Song

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  api.py  audio.py  bot.py  config.py  requirements.txt  responses.py  spotify.py  voice.py  wts.py
.github/workflows/: docker-publish.yml
src/: main.rs
