[package]
name = "whats-that-song"
authors = ["dangeredwolf"]
license = "MIT"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend"
]