[package]
name = "whats-that-song"
authors = ["dangered wolf"]
license = "MIT"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.6.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
mime_guess = "2.0.4"
urlencoding = "2.1.2"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "unstable_discord_api",
]